// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oembedArticleRoute invalid url 1`] = `
{
  "data": "Bad request. Url not recognized",
  "status": 404,
}
`;

exports[`oembedArticleRoute learningpath fail 1`] = `
{
  "data": "Not found",
  "status": 404,
}
`;

exports[`oembedArticleRoute success 1`] = `
{
  "data": {
    "breadcrumbs": [
      "Fag",
      "Emne",
    ],
    "height": 480,
    "html": "<iframe aria-label="Resource title" src="https://test.ndla.no/article-iframe/nb/urn:resource:1/123" height="480" width="854" frameborder="0" allowFullscreen="" />",
    "iframeSrc": "https://test.ndla.no/article-iframe/nb/urn:resource:1/123",
    "resourceTypes": [
      {
        "connectionId": "",
        "id": "urn:resourcetype:subjectMaterial",
        "name": "Fagstoff",
        "parentId": null,
        "supportedLanguages": [],
        "translations": [],
      },
      {
        "connectionId": "",
        "id": "urn:resourcetype:academicArticle",
        "name": "Fagartikkel",
        "parentId": "urn:resourcetype:subjectMaterial",
        "supportedLanguages": [],
        "translations": [],
      },
    ],
    "title": "Resource title",
    "type": "rich",
    "version": "1.0",
    "width": 854,
  },
  "status": 200,
}
`;

exports[`oembedArticleRoute success 2`] = `
{
  "data": {
    "breadcrumbs": [
      "Fag",
      "Emne",
    ],
    "height": 480,
    "html": "<iframe aria-label="Resource title" src="https://test.ndla.no/article-iframe/nb/urn:resource:1/123" height="480" width="854" frameborder="0" allowFullscreen="" />",
    "iframeSrc": "https://test.ndla.no/article-iframe/nb/urn:resource:1/123",
    "resourceTypes": [
      {
        "connectionId": "",
        "id": "urn:resourcetype:subjectMaterial",
        "name": "Fagstoff",
        "parentId": null,
        "supportedLanguages": [],
        "translations": [],
      },
      {
        "connectionId": "",
        "id": "urn:resourcetype:academicArticle",
        "name": "Fagartikkel",
        "parentId": "urn:resourcetype:subjectMaterial",
        "supportedLanguages": [],
        "translations": [],
      },
    ],
    "title": "Resource title",
    "type": "rich",
    "version": "1.0",
    "width": 854,
  },
  "status": 200,
}
`;
